--- a/src/Home.css
+++ b/src/Home.css
@@ -160,3 +160,17 @@
   height:30px;
 }
   }
+
+.highlighted-button {
+  background-color: yellow; /* Highlight color */
+  border: 2px solid orange; /* Border for emphasis */
+  color: black; /* Text color */
+  font-weight: bold;
+  transition: all 0.3s ease-in-out;
+}
+
+.highlighted-button:hover {
+  background-color: orange; /* Color on hover */
+  color: white;
+  border-color: red;
+}
